--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "autoload": {
         "psr-4": {
             "mikisan\\core\\util\\autoload\\": "src/"
-        }
+        },
+        "files": [
+            "src/Autoload.php"
+        ]
     }
 }
